--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
                     <span>
                         Estimado Cliente,
                     </span>
-                    <span class="justified-paraph">
+                    <span>
                         Actualmente realizamos <strong>trabajos de mantenimiento
                         en nuestro portal de pago en línea, y estará fuera
                         de servicio temporalmente</strong> durante este proceso.
                     </span>
                 </p>
-                <p class="main-container__content__p justified-paraph">
+                <p class="main-container__content__p">
                     Nuestras tiendas físicas ubicadas en Albrook Mall,
                     Westland Mall, Metro Mall, Los Pueblos, Multiplaza,
                     El Dorado y Los Andes se mantendrán disponibles en horarios
