Solucion de problema de responsive

--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
 <body>
     <div class="page">
         <div class="main-container">
-            <img class="error-img" src="./src/ilustracion.png" alt="Cargando...">
-            <h2 class="main-container__title tk-futura-pt-bold">
-                ¡Mejorando para usted!
-            </h2>
+            <div class="error-img-container">
+                <img class="error-img" src="./src/ilustracion.png" alt="Cargando...">
+            </div>
+            <div>
+                <h2 class="main-container__title tk-futura-pt-bold">
+                    ¡Mejorando para usted!
+                </h2>
+            </div>
             <div class="main-container__content tk-futura-pt">
                 <p class="main-container__content__p">
                     <span>
