Problema de responsive

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <div class="page">
         <div class="main-container">
-            <div class="error-img-container">
-                <img class="error-img" src="./src/ilustracion.png" alt="Cargando...">
+            <div class="image-container">
+                <img class="image" src="./src/ilustracion.png" alt="Cargando...">
             </div>
             <div>
                 <h2 class="main-container__title tk-futura-pt-bold">
